Sat Oct  4 16:05:49 2014  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/socket/test_unix.rb (TestSocket_UNIXSocket#test_too_long_path):
	  sockaddr_un.sun_path in AIX is defined as char[1024],
	  so "a" * 300 is not too long. "a" * 3000 would be enough.

Sat Oct  4 09:12:03 2014  Zachary Scott  <e@zzak.io>

	* ext/win32ole/sample/example*.rb: Add wait input to quit for examples
	  with patch provided by @windwiny [Fixes GH-705]
	  https://github.com/ruby/ruby/pull/705

Sat Oct  4 09:08:18 2014  Zachary Scott  <e@zzak.io>

	* ext/win32ole/win32ole.c: [DOC] Fix typo in :nodoc: reported by
	  @windwiny to [Fix GH-705] https://github.com/ruby/ruby/pull/705

	* ext/pty/pty.c: ditto

Sat Oct  4 08:59:45 2014  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_rand.c: [DOC] Add call signature for pseudo_bytes
	  and random_bytes, wrap lines at 80 chars, and remove useless
	  comments.

Sat Oct  4 08:49:34 2014  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_rand.c: [DOC] Add rdoc for method descriptions
	  By @vipulnsward [Fixes GH-657] https://github.com/ruby/ruby/pull/657

Sat Oct  4 08:23:48 2014  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_rand.c: Use rb_define_module_function instead of
	  macro. [Fixes GH-686] https://github.com/ruby/ruby/pull/686

Sat Oct  4 06:04:56 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_method.c(olemethod_set_member): remove
	  redundant NULL check.
	* ext/win32ole/win32ole_type.c(oletype_set_member): ditto.

Sat Oct  4 00:25:04 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: removed needless preparation for gcc.

Fri Oct  3 23:41:20 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: enabled gcc build with osx on travis.

Fri Oct  3 23:22:23 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* template/fake.rb.in: fix make install failure due to MSYS path
	  with mingw on MSYS environment.
	  [ruby-core:64965] [Bug #10230]
